# shell-server

./: CHANGELOG.md  LICENSE  README.md  container_runtime.py  pyproject.toml  shell_mcp.py  shell_server.py  tagentacle.toml
.github/workflows/: ci.yml
