[project]
name = "shell-server"
version = "0.1.0"
description = "MCP Server node providing exec_command for Tagentacle container shell execution"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
    "tagentacle-py-mcp>=0.2.0",
    "docker>=7.0.0",
]

[tool.uv.sources]
tagentacle-py-core = { path = "../python-sdk-core", editable = true }
tagentacle-py-mcp = { path = "../python-sdk-mcp", editable = true }
