[project]
name = "shell-mcp"
version = "0.2.0"
description = "MCP Server providing exec_command (TACL space / container / local)"
requires-python = ">=3.10"
dependencies = [
    "tagentacle-py-core>=0.1.0",
    "tagentacle-py-mcp>=0.2.0",
]

[project.optional-dependencies]
podman = ["podman>=5.0.0"]
docker = ["docker>=7.0.0"]

[tool.uv.sources]
tagentacle-py-core = { path = "../tagentacle-py-core", editable = true }
tagentacle-py-mcp = { path = "../tagentacle-py-mcp", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
